gcc/testsuite/rust/rustc/ui/parser/nested-bad-turbofish_dg.rs
fn main() {
    foo<<S as T>::V>(); // { dg-error "" "" { target *-*-* } }
}

